--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["musicPlaylist/README.md","musicPlaylist/src/App.js","musicPlaylist/src/components/MusicHomePage/index.css","musicPlaylist/src/components/Song/index.js"],"fileToBeOpened":"musicPlaylist/src/components/MusicHomePage/index.js"}
+{"ignoredFilesOrFolders":[],"openFiles":["musicPlaylist/src/App.js","musicPlaylist/src/components/MusicHomePage/index.css","musicPlaylist/src/components/Song/index.js","musicPlaylist/src/components/MusicHomePage/index.js"],"fileToBeOpened":"musicPlaylist/README.md"}
